platform/argocd/base/repo-server-ksops-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-repo-server
spec:
  template:
    spec:
      containers:
        - name: argocd-repo-server
          volumeMounts:
            - name: custom-tools
              mountPath: /usr/local/bin/kustomize
              subPath: kustomize
            - name: custom-tools
              mountPath: /.config/kustomize/plugin/viaduct.ai/v1/ksops/ksops
              subPath: ksops
            - name: sops-age
              mountPath: /.config/sops/age/keys.txt
              subPath: keys.txt
      volumes:
        - name: custom-tools
          emptyDir: {}
        - name: sops-age
          secret:
            secretName: argocd-age-key
